[package]
name = "passlock"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.33.3"
egui = "0.33.3"
aes-gcm = "0.10"
argon2 = "0.5"
arboard = "3"
rpassword = "7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
clap = { version = "4", features = ["derive"] }
md-5 = "0.10"
dirs = "5"
